Initial Python version of the Huanyang VFD modbus component. No compiling on the beaglebone please.
This needs loads more pins to be on par with what the C driver does, but we'll get there.

--- a/INSTALL
+++ b/INSTALL
@@ -1,2 +1,6 @@
+#!/bin/bash
 
-make && sudo make install 
+cp huanyangvfd.py ~/bin/
+cp huanyang485.py ~/bin/
+
+echo "Check out the config examples for the HAL setup"
